# GelbooruCrawlerRenew

./: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
src/gelbooru_crawler/: __init__.py  cli.py  core.py
src/gelbooru_crawler/tests/: crawl_test.py
